# cachyframe

./: .gitignore  README.md  cachyframe-backend.db  pyproject.toml
apps/backend/: pyproject.toml
apps/backend/src/cachyframe_backend/: __main__.py  app.py  schemas.py  services.py
apps/backend/tests/: test_app.py
apps/desktop/: pyproject.toml
apps/desktop/src/cachyframe_desktop/: __main__.py  backend_client.py  main.py  window.py
apps/proton-proxy/: pyproject.toml
apps/proton-proxy/src/cachyframe_proton_proxy/: __init__.py  __main__.py  certs.py  decoder.py  mitm_addon.py  proton.py
apps/proton-proxy/tests/: test_decoder.py
apps/proton-proxy/tests/fixtures/: capture_batch.json
apps/worker/: pyproject.toml
apps/worker/src/cachyframe_worker/: __init__.py  __main__.py  jobs.py
deploy/docker/: docker-compose.yml
docs/: architecture.md
